--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
-  "license": "MIT",
+  "name": "pretty-good",
+  "version": "0.1.0",
+  "description": "Pretty Good",
+  "license": "GNU AGPLv3",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "wds4",
+    "email": "straycat_mde@yahoo.com",
+    "url": "https://github.com/wds4"
   },
   "main": "./dist/main/main.js",
   "scripts": {
