--- a/package.json
+++ b/package.json
@@ -195,8 +195,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "PrettyGoodApps",
+    "appId": "org.erb.PrettyGoodApps",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
