--- a/package.json
+++ b/package.json
@@ -117,11 +117,11 @@
     "electron-updater": "^5.2.3",
     "nostr-react": "github:aussedatlo/nostr-react#dev/reconnect",
     "nostr-tools": "^1.6.0",
-    "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-animate-height": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
+    "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.2",
     "redux": "^4.2.0",
     "vis-data": "^7.1.4",
@@ -138,6 +138,7 @@
     "@types/node": "18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-slider": "^1.3.1",
     "@types/react-test-renderer": "^18.0.0",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.4.2",
