--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "datatables.net-bs": "^1.13.4",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
@@ -119,11 +120,13 @@
     "nostr-tools": "^1.6.0",
     "react": "^18.2.0",
     "react-animate-height": "^3.1.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.2",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.9",
     "vis-data": "^7.1.4",
     "vis-network": "^9.1.2"
   },
@@ -151,6 +154,9 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "datatables.net": "^1.13.4",
+    "datatables.net-buttons": "^2.3.6",
+    "datatables.net-dt": "^1.13.4",
     "detect-port": "^1.3.0",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
@@ -177,6 +183,7 @@
     "ipfs-core": "^0.18.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "jquery": "^3.6.4",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
