--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pretty-good",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha",
   "description": "Pretty Good",
   "license": "GNU AGPLv3",
   "author": {
