fleshing out nip51

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wds4e/pretty-good.git"
+    "url": "git+https://github.com/wds4/pretty-good.git"
   },
   "license": "GNU AGPLv3",
   "author": {
