--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
+    "light-bolt11-decoder": "^3.0.0",
     "marked": "^4.3.0",
     "marked-react": "^1.3.2",
     "nostr-react": "github:aussedatlo/nostr-react#dev/reconnect",
@@ -125,6 +126,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.4.0",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.2",
