--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,6 +15,8 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
   "dependencies": {
+    "bolt11": "^1.4.1",
+    "lnurl": "^0.24.2",
     "sqlite3": "^5.1.4"
   }
 }
