--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "ag-grid-community": "^30.1.0",
+    "ag-grid-enterprise": "^30.1.0",
     "ag-grid-react": "^30.1.0",
     "datatables.net-bs": "^1.13.4",
     "electron-debug": "^3.2.0",
